snapshots/syntax/library/statements/stop/stop_preserves_whitespace.snap
---
source: src/syntax/library/statements/system_interaction/stop.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: StopStatement
      children:
        - kind: StopKeyword
          text: Stop
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
